--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="more_info_poz">view moma</string>
     <string name="more_info_neg">not now</string>
+    <string name="learn_more">Click below to learn more</string>
+    <string name="dialog_message">Inspired by the works of artists such as Ben Nicholson and Piet Mondrian</string>
 </resources>
